--- a/src/App.scss
+++ b/src/App.scss
@@ -7,7 +7,8 @@
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+  margin-top: 10px;
+  height: 30px;
 }
 
 .App-header {
